--- a/frontend/src/BookList.css
+++ b/frontend/src/BookList.css
@@ -2,4 +2,15 @@
   background-color: aqua;
   grid-column: 1/2;
   grid-row: 2/7;
+  display: flex;
+  justify-content: center;
+}
+
+#List {
+  overflow: scroll;
+  background-color: red;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  padding-left: 40%;
+  padding-right: 40%;
 }
