--- a/frontend/src/BookList.css
+++ b/frontend/src/BookList.css
@@ -1,5 +1,5 @@
 .BookList {
-  background-color: aqua;
+  background-color: inherit;
   grid-column: 1/2;
   grid-row: 2/7;
   display: flex;
@@ -8,8 +8,12 @@
 
 #List {
   overflow: scroll;
-  background-color: red;
+  background-color: rgb(0, 74, 111);
+  text-overflow: inherit;
+  line-height: 150%;
+  color: white;
   margin-top: 30px;
+  margin-left: 10%;
   margin-bottom: 30px;
   padding-left: 40%;
   padding-right: 40%;
